--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,6 @@
-= Starter
+= Weather-service
 
 image:https://img.shields.io/badge/vert.x-3.7.1-purple.svg[link="https://vertx.io"]
-
-This application was generated using http://start.vertx.io
 
 == Building
 
@@ -20,12 +18,3 @@ To run your application:
 ```
 ./mvnw clean compile exec:java
 ```
-
-== Help
-
-* https://vertx.io/docs/[Vert.x Documentation]
-* https://stackoverflow.com/questions/tagged/vert.x?sort=newest&pageSize=15[Vert.x Stack Overflow]
-* https://groups.google.com/forum/?fromgroups#!forum/vertx[Vert.x User Group]
-* https://gitter.im/eclipse-vertx/vertx-users[Vert.x Gitter]
-
-
